--- a/main.html
+++ b/main.html
@@ -41,7 +41,9 @@
       }
     </style>
 
-    <ul></ul>
+    <ul id="bands">
+		<li id="band"></li>
+	</ul>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
