--- a/main.html
+++ b/main.html
@@ -41,8 +41,8 @@
       }
     </style>
 
-    <ul id="bands">
-		<li id="band"></li>
+    <ul id="band">
+		<li></li>
 	</ul>
 
     <script type="text/javascript" src="./script.js"></script>
